# lang-sprint-dioxus

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  generate1000-json_russian.py  generate1000json.py  note.txt  package-lock.json  package.json  tailwind.sh
assets/: dx-components-theme.css  tailwind.css
assets/data/: user.json
assets/langs/georgian/: 1000.json  alphabet.json
assets/langs/georgian/pronunciation/: index.json
assets/langs/russian/: 1000.json  alphabet.json
assets/styling/: dx-components-theme.css  main.css  navbar.css
calibrations/: calibrations.json  georgian.json
langs/georgian/: 1000.json  1000_old.json  alphabet.json
scripts/: generate1000-json_russian.py  generate1000json_fromxlslx.py  generate_asset_imports.py
src/: assets.rs  audio.rs  learner.rs  main.rs  paths.rs  settings.rs
src/components/: alphabet.rs  dict_search.rs  dictionary.rs  grammar.rs  grammar_quiz.rs  keyboard.rs  meaning_test.rs  mod.rs  settings.rs  typing_test.rs  word_detail.rs  wordcard.rs  wpm_test.rs
src/components/drills/: mod.rs  typing_engine.rs
src/components/select/: style.css
src/components/slider/: style.css
src/components/toggle/: style.css
src/grammar/: georgian.rs  mod.rs  russian.rs
src/learning/: belief.rs  evidence.rs  mod.rs  model.rs  scheduler.rs  skill.rs  store.rs
src/models/: freq_word.rs  letter.rs  lexicon.rs  mod.rs
src/views/: alphabet.rs  dashboard.rs  dictionary.rs  grammar.rs  home.rs  mod.rs  navbar.rs  reading.rs  typing_test.rs
