[package]
name = "lang-sprint-dioxus"
version = "0.4.1"
authors = ["Gauss Industries"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = ["router"] }
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1", default-features = false }
once_cell = "1.21.3"
rand = "0.9.2"
rodio = "0.21.1"
serde = "1.0.228"
serde_json = "1.0.145"
strum = { version = "0.27.2", features = ["derive"] }
tokio = "1.48.0"
wasm-bindgen = "0.2.105"
web-sys = {version = "0.3.82", features = [
    "Window",
    "Document",
    "KeyboardEvent",
    "EventTarget",
    "HtmlDocument",
] }

[features]
default = ["desktop"]
# The feature that are only required for the web = ["dioxus/web"] build target should be optional and only enabled in the web = ["dioxus/web"] feature
web = ["dioxus/web"]
# The feature that are only required for the desktop = ["dioxus/desktop"] build target should be optional and only enabled in the desktop = ["dioxus/desktop"] feature
desktop = ["dioxus/desktop"]
# The feature that are only required for the mobile = ["dioxus/mobile"] build target should be optional and only enabled in the mobile = ["dioxus/mobile"] feature
mobile = ["dioxus/mobile"]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
